# cctalk

./: Cargo.toml  ccTalk_req.txt
src/: client.rs  coinacceptor.rs  device.rs  emulator.rs  lib.rs  main.rs  protocol.rs
